--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,111 @@
 
 // Styles
 
+html {
+	height: 100%;
+}
+
+body {
+	background-color: #EFEFEF;
+	width: 100%;
+	height: 100%;
+	font-size: 100%;
+	overflow: hidden;
+	font-family: 'Open Sans', sans-serif;
+}
+
+.section {
+	width: 100%;
+	height: 100%;
+}
+
+// Nav
+
+.nav {
+	width: 100%;
+	height: 5em;
+	background-color: white;
+	position: fixed;
+}
+
+.icon {
+	float: left;
+	width: 1em;
+	height: 1em;
+}
+
+.nav a.link {
+	float: left;
+	text-decoration: none;
+	font-size: 1em;
+	padding: 2em 1.5em;
+}
+
+.logo-text {
+	float: left;
+	text-decoration: none;
+	font-size: 1em;
+	padding: 2em 1.5em 2em 0.5em;
+	font-weight: bold;
+}
+
+.logo {
+	float: left;
+}
+
+a.link:hover, .logo:hover {
+	background-color: #F1F1F1;
+}
+
+// Sections
+
+#about, #events, #gallery {
+	display: none;
+}
+
+.overlay {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	overflow: hidden;
+	z-index: 2;
+}
+
+.stage {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+}
+
+#home {
+	background: url(../img/sample.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+#about {
+	background: url(../img/sample2.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+#events {
+	background: url(../img/sample3.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 // Misc
 
 .clearfix:after {
