--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,29 +30,34 @@ body {
 
 .nav {
 	width: 100%;
-	height: 5em;
+	height: 4em;
 	background-color: white;
 	position: fixed;
 }
 
 .icon {
 	float: left;
-	width: 80px;
-	height: 80px;
+	width: 64px;
+	height: 64px;
+	background: url(../img/logo.png) center center no-repeat; 
+	-webkit-background-size: 46px;
+	-moz-background-size: 46px;
+	-o-background-size: 46px;
+	background-size: 46px;
 }
 
 .nav a.link {
 	float: left;
 	text-decoration: none;
-	font-size: 1em;
-	padding: 2em 1.5em;
+	font-size: 0.9em;
+	padding: 1.7em 1.3em;
 }
 
 .logo-text {
 	float: left;
 	text-decoration: none;
 	font-size: 1em;
-	padding: 2em 1.5em 2em 0.5em;
+	padding: 1.5em 1.5em 1.5em 0em;
 	font-weight: bold;
 }
 
@@ -90,7 +95,7 @@ a.link:hover, .logo:hover {
 }
 
 #home {
-	background: url(../img/sample.jpg) no-repeat center center fixed; 
+	background: url(../img/stagoutjake.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
