--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,11 @@ body {
   float: left;
   text-decoration: none;
   font-size: 0.9em;
-  padding: 1.7em 1.3em; }
+  padding: 1.7em 1.3em;
+  -webkit-transition: 0.8s;
+  -moz-transition: 0.8s;
+  -o-transition: 0.8s;
+  transition: 0.8s; }
 
 .logo-text {
   float: left;
@@ -99,7 +103,11 @@ body {
   float: left; }
 
 a.link:hover, .logo:hover {
-  background-color: #F1F1F1; }
+  background-color: #F1F1F1;
+  -webkit-transition: 0.8s;
+  -moz-transition: 0.8s;
+  -o-transition: 0.8s;
+  transition: 0.8s; }
 
 #about, #events, #gallery {
   display: none; }
