--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,6 +51,10 @@ body {
 	text-decoration: none;
 	font-size: 0.9em;
 	padding: 1.7em 1.3em;
+	-webkit-transition: 0.8s;
+	-moz-transition: 0.8s;
+	-o-transition: 0.8s;
+	transition: 0.8s;
 }
 
 .logo-text {
@@ -67,6 +71,10 @@ body {
 
 a.link:hover, .logo:hover {
 	background-color: #F1F1F1;
+	-webkit-transition: 0.8s;
+	-moz-transition: 0.8s;
+	-o-transition: 0.8s;
+	transition: 0.8s;
 }
 
 // Sections
