--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,12 @@ a:hover, a:active {
   outline: 0; }
 
 ::-moz-selection {
-  background: #fe57a1;
+  background: #d06200;
   color: #fff;
   text-shadow: none; }
 
 ::selection {
-  background: #fe57a1;
+  background: #d06200;
   color: #fff;
   text-shadow: none; }
 
@@ -108,6 +108,81 @@ a.link:hover, .logo:hover {
   -moz-transition: 0.8s;
   -o-transition: 0.8s;
   transition: 0.8s; }
+
+.controls {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  height: 64px;
+  width: 256px; }
+
+.list, .previous, .play, .next {
+  background: url("../img/controls.png") no-repeat;
+  -webkit-background-size: auto 64px;
+  -moz-background-size: auto 64px;
+  background-size: auto 64px;
+  float: left;
+  height: 64px;
+  width: 64px;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s; }
+  .list:hover, .previous:hover, .play:hover, .next:hover {
+    background: url("../img/controlshover.png") no-repeat;
+    -webkit-background-size: auto 64px;
+    -moz-background-size: auto 64px;
+    background-size: auto 64px; }
+
+.list {
+  background-position: 0px; }
+  .list:hover {
+    background-position: 0px; }
+
+.listselect {
+  background: url("../img/controlshover.png") no-repeat;
+  background-position: 0px;
+  -webkit-background-size: auto 64px;
+  -moz-background-size: auto 64px;
+  background-size: auto 64px; }
+
+.previous {
+  background-position: -64px; }
+  .previous:hover {
+    background-position: -64px; }
+
+.play {
+  background-position: -128px; }
+  .play:hover {
+    background-position: -128px; }
+
+.next {
+  background-position: -192px; }
+  .next:hover {
+    background-position: -192px; }
+
+.tracklist {
+  display: none;
+  position: absolute;
+  top: 64px;
+  right: 0px;
+  height: 160px;
+  width: 256px;
+  z-index: 2; }
+  .tracklist p {
+    color: #000000;
+    line-height: 32px;
+    text-align: center;
+    font-size: 16px;
+    font-size: 1em;
+    font-size: 1rem;
+    z-index: 3;
+    border-bottom: #cccccc 1px solid;
+    background-color: #FFFFFF; }
+    .tracklist p:hover {
+      color: #d06200;
+      cursor: pointer; }
 
 #about, #events, #gallery {
   display: none; }
