--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -6,5 +6,5 @@ a:hover{color: #000;}
 a:focus{outline: thin dotted;}
 a:hover, a:active{outline: 0;}
 
-::-moz-selection{background: #fe57a1; color: #fff; text-shadow: none;}
-::selection{background: #fe57a1; color: #fff; text-shadow: none;}
+::-moz-selection{background: #d06200; color: #fff; text-shadow: none;}
+::selection{background: #d06200; color: #fff; text-shadow: none;}
