--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,6 +77,90 @@ a.link:hover, .logo:hover {
 	transition: 0.8s;
 }
 
+// music player
+.controls{
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	height: 64px;
+	width: 256px;
+}
+.list, .previous, .play, .next{
+	background: url("../img/controls.png") no-repeat;
+	-webkit-background-size: auto 64px;
+	-moz-background-size: auto 64px;
+	background-size: auto 64px;
+	float: left;
+	height: 64px;
+	width: 64px;
+	-webkit-transition: 0.4s;
+	-moz-transition: 0.4s;
+	-ms-transition: 0.4s;
+	-o-transition: 0.4s;
+	transition: 0.4s;
+	&:hover{
+		background: url("../img/controlshover.png") no-repeat;
+		-webkit-background-size: auto 64px;
+		-moz-background-size: auto 64px;
+		background-size: auto 64px;
+	}
+}
+.list{
+	background-position: 0px;
+	&:hover{
+		background-position: 0px;
+	}
+}
+.listselect{
+	background: url("../img/controlshover.png") no-repeat;
+	background-position: 0px;
+	-webkit-background-size: auto 64px;
+	-moz-background-size: auto 64px;
+	background-size: auto 64px;
+}
+.previous{
+	background-position: -64px;
+	&:hover{
+		background-position: -64px;
+	}
+}
+.play{
+	background-position: -128px;
+	&:hover{
+		background-position: -128px;
+	}
+}
+.next{
+	background-position: -192px;
+	&:hover{
+		background-position: -192px;
+	}
+}
+.tracklist{
+	display: none;
+	position: absolute;
+	top: 64px;
+	right: 0px;
+	height: 160px;
+	width: 256px;
+	z-index: 2;
+	p{
+		color: #000000;
+		line-height: 32px;
+		text-align: center;
+		font-size: 16px;
+		font-size: 1em;
+		font-size: 1rem;
+		z-index: 3;
+		border-bottom: #cccccc 1px solid;
+		background-color: #FFFFFF;
+		&:hover{
+			color: #d06200;
+			cursor: pointer;
+		}
+	}
+}
+
 // Sections
 
 #about, #events, #gallery {
