--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,11 @@ a.link:hover, .logo:hover {
   -webkit-background-size: 46px;
   -moz-background-size: 46px;
   -o-background-size: 46px;
-  background-size: 46px; }
+  background-size: 46px;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s; }
 
 .controls {
   position: absolute;
@@ -208,8 +212,8 @@ a.link:hover, .logo:hover {
       color: #d06200;
       cursor: pointer; }
 
-.trackselected {
-  background-color: red; }
+.tracklist p:first-child {
+  border-left: #d06200 solid 8px; }
 
 #about, #events, #gallery {
   display: none; }
