--- a/scss/style.scss
+++ b/scss/style.scss
@@ -151,6 +151,12 @@ a.link:hover, .logo:hover{
 		background-position: -128px;
 	}
 }
+.playing{
+	background-position: -256px;
+	&:hover{
+		background-position: -256px;
+	}
+}
 .next{
 	background-position: -192px;
 	&:hover{
