--- a/css/style.css
+++ b/css/style.css
@@ -164,13 +164,13 @@ a.link:hover, .logo:hover {
     background-size: auto 64px; }
 
 .list {
-  background-position: 0px; }
+  background-position: -128px; }
   .list:hover {
-    background-position: 0px; }
+    background-position: -128px; }
 
 .listselect {
   background: url("../img/controlshover.png") no-repeat;
-  background-position: 0px;
+  background-position: -128px;
   -webkit-background-size: auto 64px;
   -moz-background-size: auto 64px;
   background-size: auto 64px; }
@@ -181,14 +181,20 @@ a.link:hover, .logo:hover {
     background-position: -64px; }
 
 .play {
-  background-position: -128px; }
+  background-position: 0px; }
   .play:hover {
-    background-position: -128px; }
+    background-position: 0px; }
 
 .playing {
-  background-position: -256px; }
+  background: url("../img/pause.png") no-repeat;
+  -webkit-background-size: auto 64px;
+  -moz-background-size: auto 64px;
+  background-size: auto 64px; }
   .playing:hover {
-    background-position: -256px; }
+    background: url("../img/pausehover.png") no-repeat;
+    -webkit-background-size: auto 64px;
+    -moz-background-size: auto 64px;
+    background-size: auto 64px; }
 
 .next {
   background-position: -192px; }
