almost there with play button

--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,12 @@ a.link:hover, .logo:hover {
   background: url("../img/pause.png") no-repeat;
   -webkit-background-size: auto 64px;
   -moz-background-size: auto 64px;
-  background-size: auto 64px; }
+  background-size: auto 64px;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s; }
   .playing:hover {
     background: url("../img/pausehover.png") no-repeat;
     -webkit-background-size: auto 64px;
