--- a/css/style.css
+++ b/css/style.css
@@ -144,11 +144,7 @@ a.link:hover, .logo:hover {
   height: 64px;
   width: 256px; }
 
-.list, .previous, .play, .next {
-  background: url("../img/controls.png") no-repeat;
-  -webkit-background-size: auto 64px;
-  -moz-background-size: auto 64px;
-  background-size: auto 64px;
+.list, .previous, .next, .play, .playing {
   float: left;
   height: 64px;
   width: 64px;
@@ -157,54 +153,61 @@ a.link:hover, .logo:hover {
   -ms-transition: 0.4s;
   -o-transition: 0.4s;
   transition: 0.4s; }
-  .list:hover, .previous:hover, .play:hover, .next:hover {
+
+.list, .previous, .next {
+  background: url("../img/controls.png") no-repeat;
+  -webkit-background-size: 192px 64px;
+  -moz-background-size: 192px 64px;
+  background-size: 192px 64px; }
+  .list:hover, .previous:hover, .next:hover {
     background: url("../img/controlshover.png") no-repeat;
-    -webkit-background-size: auto 64px;
-    -moz-background-size: auto 64px;
-    background-size: auto 64px; }
+    -webkit-background-size: 192px 64px;
+    -moz-background-size: 192px 64px;
+    background-size: 192px 64px; }
 
 .list {
-  background-position: -128px; }
+  background-position: -64px; }
   .list:hover {
-    background-position: -128px; }
+    background-position: -64px; }
 
 .listselect {
   background: url("../img/controlshover.png") no-repeat;
-  background-position: -128px;
-  -webkit-background-size: auto 64px;
-  -moz-background-size: auto 64px;
-  background-size: auto 64px; }
+  background-position: -64px;
+  -webkit-background-size: 192px 64px;
+  -moz-background-size: 192px 64px;
+  background-size: 192px 64px; }
 
 .previous {
-  background-position: -64px; }
+  background-position: 0px; }
   .previous:hover {
-    background-position: -64px; }
+    background-position: 0px; }
 
 .play {
-  background-position: 0px; }
+  background: url("../img/play.png") no-repeat;
+  -webkit-background-size: 64px;
+  -moz-background-size: 64px;
+  background-size: 64px; }
   .play:hover {
-    background-position: 0px; }
+    background: url("../img/playhover.png") no-repeat;
+    -webkit-background-size: 64px;
+    -moz-background-size: 64px;
+    background-size: 64px; }
 
 .playing {
   background: url("../img/pause.png") no-repeat;
-  -webkit-background-size: auto 64px;
-  -moz-background-size: auto 64px;
-  background-size: auto 64px;
-  -webkit-transition: 0.4s;
-  -moz-transition: 0.4s;
-  -ms-transition: 0.4s;
-  -o-transition: 0.4s;
-  transition: 0.4s; }
+  -webkit-background-size: 64px;
+  -moz-background-size: 64px;
+  background-size: 64px; }
   .playing:hover {
     background: url("../img/pausehover.png") no-repeat;
-    -webkit-background-size: auto 64px;
-    -moz-background-size: auto 64px;
-    background-size: auto 64px; }
+    -webkit-background-size: 64px;
+    -moz-background-size: 64px;
+    background-size: 64px; }
 
 .next {
-  background-position: -192px; }
+  background-position: -128px; }
   .next:hover {
-    background-position: -192px; }
+    background-position: -128px; }
 
 .tracklist {
   display: none;
