fixed minor issues with player

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,6 +105,7 @@ a.link:hover, .logo:hover{
 	top: 0px;
 	height: 64px;
 	width: 256px;
+	display: none;
 }
 .list, .previous, .next, .play, .playing{
 	float: left;
