--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,8 @@ a.link:hover, .logo:hover {
   right: 0px;
   top: 0px;
   height: 64px;
-  width: 256px; }
+  width: 256px;
+  display: none; }
 
 .list, .previous, .next, .play, .playing {
   float: left;
