Removed extra style sheet, improved css headers

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/* ============================================
+   Reset
+   ============================================ */
 /* line 1, ../scss/_reset.scss */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figcaption, figure, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
@@ -79,17 +82,23 @@ a:hover, a:active {
   text-shadow: none;
 }
 
-/* line 11, ../scss/style.scss */
+/* ============================================
+   Typography
+   ============================================ */
+/* ============================================
+   Styles
+   ============================================ */
+/* line 17, ../scss/style.scss */
 html, body {
   overflow: hidden;
 }
 
-/* line 15, ../scss/style.scss */
+/* line 21, ../scss/style.scss */
 html {
   height: 100%;
 }
 
-/* line 19, ../scss/style.scss */
+/* line 25, ../scss/style.scss */
 body {
   background-color: #EFEFEF;
   width: 100%;
@@ -99,13 +108,16 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
-/* line 28, ../scss/style.scss */
+/* line 34, ../scss/style.scss */
 .section {
   width: 100%;
   height: 100%;
 }
 
-/* line 35, ../scss/style.scss */
+/* ============================================
+   Nav
+   ============================================ */
+/* line 43, ../scss/style.scss */
 .nav {
   width: 100%;
   height: 4em;
@@ -114,7 +126,7 @@ body {
   border-bottom: 4px solid #FF7729;
 }
 
-/* line 43, ../scss/style.scss */
+/* line 51, ../scss/style.scss */
 .icon {
   float: left;
   width: 64px;
@@ -126,7 +138,7 @@ body {
   background-size: 46px;
 }
 
-/* line 54, ../scss/style.scss */
+/* line 62, ../scss/style.scss */
 .nav a.link {
   float: left;
   text-decoration: none;
@@ -138,7 +150,7 @@ body {
   transition: 0.4s;
 }
 
-/* line 65, ../scss/style.scss */
+/* line 73, ../scss/style.scss */
 .logo-text {
   float: left;
   text-decoration: none;
@@ -147,17 +159,20 @@ body {
   font-weight: bold;
 }
 
-/* line 73, ../scss/style.scss */
+/* line 81, ../scss/style.scss */
 .logo {
   float: left;
 }
 
-/* line 77, ../scss/style.scss */
+/* line 85, ../scss/style.scss */
 a.link:hover, .logo:hover {
   background-color: #EFEFEF;
 }
 
-/* line 82, ../scss/style.scss */
+/* ============================================
+   Music Player
+   ============================================ */
+/* line 93, ../scss/style.scss */
 .controls {
   position: absolute;
   right: 0px;
@@ -167,7 +182,7 @@ a.link:hover, .logo:hover {
   display: none;
 }
 
-/* line 90, ../scss/style.scss */
+/* line 101, ../scss/style.scss */
 .player {
   background: url("../img/controls-sprite.png") no-repeat;
   -webkit-background-size: 240px 96px;
@@ -176,7 +191,7 @@ a.link:hover, .logo:hover {
   background-position: 0 0;
 }
 
-/* line 98, ../scss/style.scss */
+/* line 109, ../scss/style.scss */
 .list, .previous, .next, .play, .playing {
   float: left;
   height: 48px;
@@ -184,57 +199,57 @@ a.link:hover, .logo:hover {
   margin: 8px 0px;
 }
 
-/* line 105, ../scss/style.scss */
+/* line 116, ../scss/style.scss */
 .previous {
   background-position: 0 0;
 }
 
-/* line 109, ../scss/style.scss */
+/* line 120, ../scss/style.scss */
 .previous:hover {
   background-position: 0 -48px;
 }
 
-/* line 113, ../scss/style.scss */
+/* line 124, ../scss/style.scss */
 .play {
   background-position: -48px 0;
 }
 
-/* line 117, ../scss/style.scss */
+/* line 128, ../scss/style.scss */
 .play:hover {
   background-position: -48px -48px;
 }
 
-/* line 121, ../scss/style.scss */
+/* line 132, ../scss/style.scss */
 .next {
   background-position: -96px 0;
 }
 
-/* line 125, ../scss/style.scss */
+/* line 136, ../scss/style.scss */
 .next:hover {
   background-position: -96px -48px;
 }
 
-/* line 129, ../scss/style.scss */
+/* line 140, ../scss/style.scss */
 .list {
   background-position: -144px 0;
 }
 
-/* line 133, ../scss/style.scss */
+/* line 144, ../scss/style.scss */
 .list:hover {
   background-position: -144px -48px;
 }
 
-/* line 137, ../scss/style.scss */
+/* line 148, ../scss/style.scss */
 .playing {
   background-position: -192px 0;
 }
 
-/* line 141, ../scss/style.scss */
+/* line 152, ../scss/style.scss */
 .playing:hover {
   background-position: -192px -48px;
 }
 
-/* line 145, ../scss/style.scss */
+/* line 156, ../scss/style.scss */
 .tracklist {
   display: none;
   position: absolute;
@@ -244,13 +259,13 @@ a.link:hover, .logo:hover {
   border-bottom: 4px solid #FF7729;
   z-index: 2;
 }
-/* line 153, ../scss/style.scss */
+/* line 164, ../scss/style.scss */
 .tracklist .album {
   width: 50px;
   height: 50px;
   float: left;
 }
-/* line 158, ../scss/style.scss */
+/* line 169, ../scss/style.scss */
 .tracklist p {
   color: #000000;
   line-height: 50px;
@@ -263,13 +278,13 @@ a.link:hover, .logo:hover {
   border-bottom: #EFEFEF 1px solid;
   background-color: #FFFFFF;
 }
-/* line 169, ../scss/style.scss */
+/* line 180, ../scss/style.scss */
 .tracklist p:hover {
   color: #666;
   cursor: pointer;
 }
 
-/* line 179, ../scss/style.scss */
+/* line 190, ../scss/style.scss */
 .footer {
   background-color: white;
   height: 48px;
@@ -280,12 +295,15 @@ a.link:hover, .logo:hover {
   left: 0;
 }
 
-/* line 191, ../scss/style.scss */
+/* ============================================
+   Sections
+   ============================================ */
+/* line 204, ../scss/style.scss */
 #about, #events, #gallery {
   display: none;
 }
 
-/* line 195, ../scss/style.scss */
+/* line 208, ../scss/style.scss */
 .overlay {
   width: 100%;
   height: 100%;
@@ -296,7 +314,7 @@ a.link:hover, .logo:hover {
   z-index: 2;
 }
 
-/* line 205, ../scss/style.scss */
+/* line 218, ../scss/style.scss */
 .stage {
   width: 100%;
   height: 100%;
@@ -306,12 +324,15 @@ a.link:hover, .logo:hover {
   z-index: 1;
 }
 
-/* line 214, ../scss/style.scss */
+/* line 227, ../scss/style.scss */
 #home {
   background-color: #EFEFEF;
 }
 
-/* line 218, ../scss/style.scss */
+/* ============================================
+   About
+   ============================================ */
+/* line 235, ../scss/style.scss */
 #about {
   background: url(../img/sample2.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -320,7 +341,10 @@ a.link:hover, .logo:hover {
   background-size: cover;
 }
 
-/* line 226, ../scss/style.scss */
+/* ============================================
+   Events
+   ============================================ */
+/* line 247, ../scss/style.scss */
 #events {
   background: url(../img/sample3.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -329,7 +353,10 @@ a.link:hover, .logo:hover {
   background-size: cover;
 }
 
-/* line 236, ../scss/style.scss */
+/* ============================================
+   Misc
+   ============================================ */
+/* line 259, ../scss/style.scss */
 .clearfix:after {
   content: ".";
   display: block;
@@ -339,17 +366,17 @@ a.link:hover, .logo:hover {
   height: 0;
 }
 
-/* line 244, ../scss/style.scss */
+/* line 267, ../scss/style.scss */
 .clearfix {
   display: inline-block;
 }
 
-/* line 247, ../scss/style.scss */
+/* line 270, ../scss/style.scss */
 html[xmlns] .clearfix {
   display: block;
 }
 
-/* line 250, ../scss/style.scss */
+/* line 273, ../scss/style.scss */
 * html .clearfix {
   height: 1%;
 }
