--- a/scss/style.scss
+++ b/scss/style.scss
@@ -178,6 +178,9 @@ a.link:hover, .logo:hover{
 		}
 	}
 }
+.trackselected{
+	background-color: red;
+}
 .trackselected .status {
 	// Playing gif goes here
 }
