--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ body {
 /* line 34, ../scss/style.scss */
 .section {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 /* ============================================
@@ -124,9 +124,10 @@ body {
   background-color: #FFFFFF;
   position: fixed;
   border-bottom: 4px solid #FF7729;
+  z-index: 2;
 }
 
-/* line 51, ../scss/style.scss */
+/* line 52, ../scss/style.scss */
 .icon {
   float: left;
   width: 64px;
@@ -138,7 +139,7 @@ body {
   background-size: 46px;
 }
 
-/* line 62, ../scss/style.scss */
+/* line 63, ../scss/style.scss */
 .nav a.link {
   float: left;
   text-decoration: none;
@@ -150,7 +151,7 @@ body {
   transition: 0.4s;
 }
 
-/* line 73, ../scss/style.scss */
+/* line 74, ../scss/style.scss */
 .logo-text {
   float: left;
   text-decoration: none;
@@ -159,12 +160,12 @@ body {
   font-weight: bold;
 }
 
-/* line 81, ../scss/style.scss */
+/* line 82, ../scss/style.scss */
 .logo {
   float: left;
 }
 
-/* line 85, ../scss/style.scss */
+/* line 86, ../scss/style.scss */
 a.link:hover, .logo:hover {
   background-color: #EFEFEF;
 }
@@ -172,17 +173,17 @@ a.link:hover, .logo:hover {
 /* ============================================
    Music Player
    ============================================ */
-/* line 93, ../scss/style.scss */
+/* line 94, ../scss/style.scss */
 .controls {
   position: absolute;
   right: 0px;
   top: 0px;
   height: 48px;
   margin-right: 32px;
-  display: none;
+  z-index: 3;
 }
 
-/* line 101, ../scss/style.scss */
+/* line 102, ../scss/style.scss */
 .player {
   background: url("../img/controls-sprite.png") no-repeat;
   -webkit-background-size: 240px 96px;
@@ -191,7 +192,7 @@ a.link:hover, .logo:hover {
   background-position: 0 0;
 }
 
-/* line 109, ../scss/style.scss */
+/* line 110, ../scss/style.scss */
 .list, .previous, .next, .play, .playing {
   float: left;
   height: 48px;
@@ -199,57 +200,52 @@ a.link:hover, .logo:hover {
   margin: 8px 0px;
 }
 
-/* line 116, ../scss/style.scss */
+/* line 117, ../scss/style.scss */
 .previous {
   background-position: 0 0;
 }
-
-/* line 120, ../scss/style.scss */
+/* line 119, ../scss/style.scss */
 .previous:hover {
   background-position: 0 -48px;
 }
 
 /* line 124, ../scss/style.scss */
 .play {
-  background-position: -48px 0;
+  background-position: -192px 0;
 }
-
-/* line 128, ../scss/style.scss */
+/* line 126, ../scss/style.scss */
 .play:hover {
-  background-position: -48px -48px;
+  background-position: -192px -48px;
 }
 
-/* line 132, ../scss/style.scss */
+/* line 131, ../scss/style.scss */
 .next {
   background-position: -96px 0;
 }
-
-/* line 136, ../scss/style.scss */
+/* line 133, ../scss/style.scss */
 .next:hover {
   background-position: -96px -48px;
 }
 
-/* line 140, ../scss/style.scss */
+/* line 138, ../scss/style.scss */
 .list {
   background-position: -144px 0;
 }
-
-/* line 144, ../scss/style.scss */
+/* line 140, ../scss/style.scss */
 .list:hover {
   background-position: -144px -48px;
 }
 
-/* line 148, ../scss/style.scss */
+/* line 145, ../scss/style.scss */
 .playing {
-  background-position: -192px 0;
+  background-position: -48px 0;
+}
+/* line 147, ../scss/style.scss */
+.playing:hover {
+  background-position: -48px -48px;
 }
 
 /* line 152, ../scss/style.scss */
-.playing:hover {
-  background-position: -192px -48px;
-}
-
-/* line 156, ../scss/style.scss */
 .tracklist {
   display: none;
   position: absolute;
@@ -259,13 +255,13 @@ a.link:hover, .logo:hover {
   border-bottom: 4px solid #FF7729;
   z-index: 2;
 }
-/* line 164, ../scss/style.scss */
+/* line 160, ../scss/style.scss */
 .tracklist .album {
   width: 50px;
   height: 50px;
   float: left;
 }
-/* line 169, ../scss/style.scss */
+/* line 165, ../scss/style.scss */
 .tracklist p {
   color: #000000;
   line-height: 50px;
@@ -278,13 +274,13 @@ a.link:hover, .logo:hover {
   border-bottom: #EFEFEF 1px solid;
   background-color: #FFFFFF;
 }
-/* line 180, ../scss/style.scss */
+/* line 176, ../scss/style.scss */
 .tracklist p:hover {
   color: #666;
   cursor: pointer;
 }
 
-/* line 190, ../scss/style.scss */
+/* line 186, ../scss/style.scss */
 .footer {
   background-color: white;
   height: 48px;
@@ -298,23 +294,12 @@ a.link:hover, .logo:hover {
 /* ============================================
    Sections
    ============================================ */
-/* line 204, ../scss/style.scss */
+/* line 200, ../scss/style.scss */
 #about, #events, #gallery {
   display: none;
 }
 
-/* line 208, ../scss/style.scss */
-.overlay {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  position: absolute;
-  overflow: hidden;
-  z-index: 2;
-}
-
-/* line 218, ../scss/style.scss */
+/* line 207, ../scss/style.scss */
 .stage {
   width: 100%;
   height: 100%;
@@ -324,7 +309,7 @@ a.link:hover, .logo:hover {
   z-index: 1;
 }
 
-/* line 227, ../scss/style.scss */
+/* line 216, ../scss/style.scss */
 #home {
   background-color: #EFEFEF;
 }
@@ -332,7 +317,7 @@ a.link:hover, .logo:hover {
 /* ============================================
    About
    ============================================ */
-/* line 235, ../scss/style.scss */
+/* line 224, ../scss/style.scss */
 #about {
   background: url(../img/sample2.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -344,7 +329,7 @@ a.link:hover, .logo:hover {
 /* ============================================
    Events
    ============================================ */
-/* line 247, ../scss/style.scss */
+/* line 236, ../scss/style.scss */
 #events {
   background: url(../img/sample3.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -354,9 +339,45 @@ a.link:hover, .logo:hover {
 }
 
 /* ============================================
+   Gallery
+   ============================================ */
+/* line 248, ../scss/style.scss */
+#gallery {
+  width: 100%;
+  min-height: 100%;
+  /* Images */
+}
+/* line 251, ../scss/style.scss */
+#gallery .columns {
+  min-height: 33.333%;
+}
+/* line 253, ../scss/style.scss */
+#gallery .columns img {
+  width: 100%;
+  margin-bottom: 0.333%;
+}
+/* line 257, ../scss/style.scss */
+#gallery .columns .left {
+  float: left;
+  width: 33%;
+  margin-right: 0.333%;
+}
+/* line 262, ../scss/style.scss */
+#gallery .columns .center {
+  float: left;
+  width: 33.333%;
+}
+/* line 266, ../scss/style.scss */
+#gallery .columns .right {
+  float: left;
+  width: 33%;
+  margin-left: 0.333%;
+}
+
+/* ============================================
    Misc
    ============================================ */
-/* line 259, ../scss/style.scss */
+/* line 281, ../scss/style.scss */
 .clearfix:after {
   content: ".";
   display: block;
@@ -366,17 +387,17 @@ a.link:hover, .logo:hover {
   height: 0;
 }
 
-/* line 267, ../scss/style.scss */
+/* line 289, ../scss/style.scss */
 .clearfix {
   display: inline-block;
 }
 
-/* line 270, ../scss/style.scss */
+/* line 292, ../scss/style.scss */
 html[xmlns] .clearfix {
   display: block;
 }
 
-/* line 273, ../scss/style.scss */
+/* line 295, ../scss/style.scss */
 * html .clearfix {
   height: 1%;
 }
