--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,7 +33,7 @@ body {
 
 .section {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 }
 
 /* ============================================
@@ -46,6 +46,7 @@ body {
 	background-color: #FFFFFF;
 	position: fixed;
 	border-bottom: 4px solid #FF7729;
+	z-index: 2;
 }
 
 .icon {
@@ -96,7 +97,7 @@ a.link:hover, .logo:hover{
 	top: 0px;
 	height: 48px;
 	margin-right: 32px;
-	display: none;
+	z-index: 3;
 }
 .player {
 	background: url("../img/controls-sprite.png") no-repeat;
@@ -204,13 +205,6 @@ a.link:hover, .logo:hover{
 }
 
 .overlay {
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	position: absolute;
-	overflow: hidden;
-	z-index: 2;
 }
 
 .stage {
@@ -248,6 +242,39 @@ a.link:hover, .logo:hover{
 		-moz-background-size: cover;
 		-o-background-size: cover;
 		background-size: cover;
+	}
+
+	/* ============================================
+	   Gallery
+	   ============================================ */
+	
+	#gallery {
+		width: 100%;
+		min-height: 100%;
+		.columns {
+			min-height: 33.333%;
+			img {
+				width: 100%;
+				margin-bottom: 0.333%;
+			}
+			.left {
+				float: left;
+				width: 33%;
+				margin-right: 0.333%;
+			}
+			.center {
+				float: left;
+				width: 33.333%;
+			}
+			.right {
+				float: left;
+				width: 33%;
+				margin-left: 0.333%;
+			}
+		}
+
+		/* Images */
+
 	}
 
 /* ============================================
