--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ a:hover, a:active {
    ============================================ */
 /* line 17, ../scss/style.scss */
 html, body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* line 21, ../scss/style.scss */
@@ -175,7 +175,7 @@ a.link:hover, .logo:hover {
    ============================================ */
 /* line 94, ../scss/style.scss */
 .controls {
-  position: absolute;
+  position: fixed;
   right: 0px;
   top: 0px;
   height: 48px;
@@ -280,7 +280,12 @@ a.link:hover, .logo:hover {
   cursor: pointer;
 }
 
-/* line 186, ../scss/style.scss */
+/* line 182, ../scss/style.scss */
+.trackselected {
+  background-color: red;
+}
+
+/* line 189, ../scss/style.scss */
 .footer {
   background-color: white;
   height: 48px;
@@ -294,12 +299,12 @@ a.link:hover, .logo:hover {
 /* ============================================
    Sections
    ============================================ */
-/* line 200, ../scss/style.scss */
+/* line 203, ../scss/style.scss */
 #about, #events, #gallery {
   display: none;
 }
 
-/* line 207, ../scss/style.scss */
+/* line 210, ../scss/style.scss */
 .stage {
   width: 100%;
   height: 100%;
@@ -309,7 +314,7 @@ a.link:hover, .logo:hover {
   z-index: 1;
 }
 
-/* line 216, ../scss/style.scss */
+/* line 219, ../scss/style.scss */
 #home {
   background-color: #EFEFEF;
 }
@@ -317,7 +322,7 @@ a.link:hover, .logo:hover {
 /* ============================================
    About
    ============================================ */
-/* line 224, ../scss/style.scss */
+/* line 227, ../scss/style.scss */
 #about {
   background: url(../img/sample2.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -329,7 +334,7 @@ a.link:hover, .logo:hover {
 /* ============================================
    Events
    ============================================ */
-/* line 236, ../scss/style.scss */
+/* line 239, ../scss/style.scss */
 #events {
   background: url(../img/sample3.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -341,33 +346,33 @@ a.link:hover, .logo:hover {
 /* ============================================
    Gallery
    ============================================ */
-/* line 248, ../scss/style.scss */
+/* line 251, ../scss/style.scss */
 #gallery {
   width: 100%;
   min-height: 100%;
   /* Images */
 }
-/* line 251, ../scss/style.scss */
+/* line 254, ../scss/style.scss */
 #gallery .columns {
   min-height: 33.333%;
 }
-/* line 253, ../scss/style.scss */
+/* line 256, ../scss/style.scss */
 #gallery .columns img {
   width: 100%;
   margin-bottom: 0.333%;
 }
-/* line 257, ../scss/style.scss */
+/* line 260, ../scss/style.scss */
 #gallery .columns .left {
   float: left;
   width: 33%;
   margin-right: 0.333%;
 }
-/* line 262, ../scss/style.scss */
+/* line 265, ../scss/style.scss */
 #gallery .columns .center {
   float: left;
   width: 33.333%;
 }
-/* line 266, ../scss/style.scss */
+/* line 269, ../scss/style.scss */
 #gallery .columns .right {
   float: left;
   width: 33%;
@@ -377,7 +382,7 @@ a.link:hover, .logo:hover {
 /* ============================================
    Misc
    ============================================ */
-/* line 281, ../scss/style.scss */
+/* line 284, ../scss/style.scss */
 .clearfix:after {
   content: ".";
   display: block;
@@ -387,17 +392,17 @@ a.link:hover, .logo:hover {
   height: 0;
 }
 
-/* line 289, ../scss/style.scss */
+/* line 292, ../scss/style.scss */
 .clearfix {
   display: inline-block;
 }
 
-/* line 292, ../scss/style.scss */
+/* line 295, ../scss/style.scss */
 html[xmlns] .clearfix {
   display: block;
 }
 
-/* line 295, ../scss/style.scss */
+/* line 298, ../scss/style.scss */
 * html .clearfix {
   height: 1%;
 }
