--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@
    ============================================ */
 
 html, body {
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 html {
@@ -92,7 +92,7 @@ a.link:hover, .logo:hover{
    ============================================ */
 
 .controls{
-	position: absolute;
+	position: fixed;
 	right: 0px;
 	top: 0px;
 	height: 48px;
