--- a/scss/style.scss
+++ b/scss/style.scss
@@ -155,14 +155,9 @@ a.link:hover, .logo:hover{
 	position: absolute;
 	top: 64px;
 	right: 0px;
-	width: 256px;
+	width: 192px;
 	border-bottom: 4px solid #FF7729;
 	z-index: 2;
-	.album {
-		width: 50px;
-		height: 50px;
-		float: left;
-	}
 	p{
 		color: #000000;
 		line-height: 50px;
@@ -180,11 +175,8 @@ a.link:hover, .logo:hover{
 		}
 	}
 }
-.trackselected{
-	background-color: red;
-}
-.trackselected .status {
-	// Playing gif goes here
+.trackplaying{//not working for some reason
+	border-left: 4px solid #FF7729;
 }
 
 .footer {
@@ -203,9 +195,6 @@ a.link:hover, .logo:hover{
 
 #about, #events, #gallery {
 	display: none;
-}
-
-.overlay {
 }
 
 .stage {
