--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,58 @@
 /* ============================================
    Reset
    ============================================ */
-/* line 1, ../scss/_reset.scss */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figcaption, figure, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
 
-/* line 1, ../scss/_reset.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block;
-}
+  display: block; }
 
-/* line 1, ../scss/_reset.scss */
 body {
-  line-height: 1;
-}
+  line-height: 1; }
 
-/* line 1, ../scss/_reset.scss */
 ol, ul {
-  list-style: none;
-}
+  list-style: none; }
 
-/* line 1, ../scss/_reset.scss */
 blockquote, q {
-  quotes: none;
-}
+  quotes: none; }
 
-/* line 1, ../scss/_reset.scss */
 blockquote:before, blockquote:after, q:before, q:after {
   content: "";
-  content: none;
-}
+  content: none; }
 
-/* line 1, ../scss/_reset.scss */
 table {
   border-collapse: collapse;
-  border-spacing: 0;
-}
+  border-spacing: 0; }
 
-/* line 3, ../scss/_reset.scss */
 a {
-  color: #000;
-}
+  color: #000; }
 
-/* line 4, ../scss/_reset.scss */
 a:visited {
-  color: #000;
-}
+  color: #000; }
 
-/* line 5, ../scss/_reset.scss */
 a:hover {
-  color: #000;
-}
+  color: #000; }
 
-/* line 6, ../scss/_reset.scss */
 a:focus {
-  outline: thin dotted;
-}
+  outline: thin dotted; }
 
-/* line 7, ../scss/_reset.scss */
 a:hover, a:active {
-  outline: 0;
-}
+  outline: 0; }
 
-/* line 9, ../scss/_reset.scss */
 ::-moz-selection {
   background: #d06200;
   color: #fff;
-  text-shadow: none;
-}
+  text-shadow: none; }
 
-/* line 10, ../scss/_reset.scss */
 ::selection {
   background: #d06200;
   color: #fff;
-  text-shadow: none;
-}
+  text-shadow: none; }
 
 /* ============================================
    Typography
@@ -88,47 +60,36 @@ a:hover, a:active {
 /* ============================================
    Styles
    ============================================ */
-/* line 17, ../scss/style.scss */
 html, body {
   overflow-x: hidden;
-  overflow-y: scroll;
-}
+  overflow-y: scroll; }
 
-/* line 22, ../scss/style.scss */
 html {
-  height: 100%;
-}
+  height: 100%; }
 
-/* line 26, ../scss/style.scss */
 body {
   background-color: #EFEFEF;
   width: 100%;
   height: 100%;
   font-size: 100%;
   overflow: hidden;
-  font-family: 'Open Sans', sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
 
-/* line 35, ../scss/style.scss */
 .section {
   width: 100%;
-  min-height: 100%;
-}
+  min-height: 100%; }
 
 /* ============================================
    Nav
    ============================================ */
-/* line 44, ../scss/style.scss */
 .nav {
   width: 100%;
   height: 4em;
   background-color: #FFFFFF;
   position: fixed;
-  border-bottom: 4px solid #FF7729;
-  z-index: 2;
-}
+  border-bottom: 4px solid #ff7729;
+  z-index: 2; }
 
-/* line 53, ../scss/style.scss */
 .icon {
   float: left;
   width: 64px;
@@ -137,10 +98,8 @@ body {
   -webkit-background-size: 46px;
   -moz-background-size: 46px;
   -o-background-size: 46px;
-  background-size: 46px;
-}
+  background-size: 46px; }
 
-/* line 64, ../scss/style.scss */
 .nav a.link {
   float: left;
   text-decoration: none;
@@ -149,261 +108,209 @@ body {
   -webkit-transition: 0.4s;
   -moz-transition: 0.4s;
   -o-transition: 0.4s;
-  transition: 0.4s;
-}
+  transition: 0.4s; }
 
-/* line 75, ../scss/style.scss */
 .logo-text {
   float: left;
   text-decoration: none;
   font-size: 1em;
   padding: 1.5em 1.5em 1.5em 0em;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
-/* line 83, ../scss/style.scss */
 .logo {
-  float: left;
-}
+  float: left; }
 
-/* line 87, ../scss/style.scss */
 a.link:hover, .logo:hover {
-  background-color: #EFEFEF;
-}
+  background-color: #EFEFEF; }
 
 /* ============================================
    Music Player
    ============================================ */
-/* line 95, ../scss/style.scss */
 .controls {
   position: fixed;
   right: 0px;
   top: 0px;
   height: 48px;
   margin-right: 32px;
-  z-index: 3;
-}
+  z-index: 3; }
 
-/* line 103, ../scss/style.scss */
 .player {
   background: url("../img/controls-sprite.png") no-repeat;
   -webkit-background-size: 240px 96px;
   -moz-background-size: 240px 96px;
   background-size: 240px 96px;
-  background-position: 0 0;
-}
+  background-position: 0 0; }
 
-/* line 111, ../scss/style.scss */
 .list, .previous, .next, .play, .playing {
   float: left;
   height: 48px;
   width: 48px;
-  margin: 8px 0px;
-}
+  margin: 8px 0px; }
 
-/* line 118, ../scss/style.scss */
 .previous {
-  background-position: 0 0;
-}
-/* line 120, ../scss/style.scss */
-.previous:hover {
-  background-position: 0 -48px;
-}
+  background-position: 0 0; }
+  .previous:hover {
+    background-position: 0 -48px; }
 
-/* line 125, ../scss/style.scss */
 .play {
-  background-position: -192px 0;
-}
-/* line 127, ../scss/style.scss */
-.play:hover {
-  background-position: -192px -48px;
-}
+  background-position: -192px 0; }
+  .play:hover {
+    background-position: -192px -48px; }
 
-/* line 132, ../scss/style.scss */
 .next {
-  background-position: -96px 0;
-}
-/* line 134, ../scss/style.scss */
-.next:hover {
-  background-position: -96px -48px;
-}
+  background-position: -96px 0; }
+  .next:hover {
+    background-position: -96px -48px; }
 
-/* line 139, ../scss/style.scss */
 .list {
-  background-position: -144px 0;
-}
-/* line 141, ../scss/style.scss */
-.list:hover {
-  background-position: -144px -48px;
-}
+  background-position: -144px 0; }
+  .list:hover {
+    background-position: -144px -48px; }
 
-/* line 146, ../scss/style.scss */
 .playing {
-  background-position: -48px 0;
-}
-/* line 148, ../scss/style.scss */
-.playing:hover {
-  background-position: -48px -48px;
-}
+  background-position: -48px 0; }
+  .playing:hover {
+    background-position: -48px -48px; }
 
-/* line 153, ../scss/style.scss */
-.tracklist {
-  display: none;
+.dropdown {
   position: absolute;
   top: 64px;
-  right: 0px;
-  width: 256px;
-  border-bottom: 4px solid #FF7729;
-  z-index: 2;
-}
-/* line 161, ../scss/style.scss */
-.tracklist .album {
-  width: 50px;
-  height: 50px;
+  width: 256px; }
+
+.nowplaying {
   float: left;
-}
-/* line 166, ../scss/style.scss */
-.tracklist p {
-  color: #000000;
-  line-height: 50px;
-  text-indent: 20px;
-  text-align: left;
-  font-size: 16px;
-  font-size: 1em;
-  font-size: 1rem;
-  z-index: 3;
-  border-bottom: #EFEFEF 1px solid;
   background-color: #FFFFFF;
-}
-/* line 177, ../scss/style.scss */
-.tracklist p:hover {
-  color: #666;
-  cursor: pointer;
-}
+  border-bottom: #efefef 1px solid;
+  width: 256px;
+  height: 64px;
+  z-index: 2; }
+  .nowplaying h1 {
+    line-height: 36px;
+    font-size: 1em;
+    color: #000000; }
+  .nowplaying h2 {
+    padding-left: 16px;
+    float: left;
+    line-height: 24px;
+    font-size: 0.75em;
+    color: #FF7729; }
 
-/* line 183, ../scss/style.scss */
-.trackselected {
-  background-color: red;
-}
+.albumart {
+  float: left;
+  height: 64px;
+  width: 64px;
+  background-color: #FF7729; }
 
-/* line 190, ../scss/style.scss */
+.tracklist {
+  display: none;
+  float: left;
+  width: 256px;
+  border-bottom: 4px solid #ff7729;
+  z-index: 2; }
+  .tracklist p {
+    color: #000000;
+    line-height: 32px;
+    text-indent: 20px;
+    text-align: left;
+    font-size: 16px;
+    font-size: 1em;
+    font-size: 1rem;
+    z-index: 3;
+    border-bottom: #efefef 1px solid;
+    background-color: #FFFFFF; }
+    .tracklist p:hover {
+      color: #666;
+      cursor: pointer; }
+
+.trackplaying {
+  border-left: 8px solid #ff7729; }
+
 .footer {
   background-color: white;
   height: 48px;
   width: 100%;
-  border-top: 1px #E0E0E0 solid;
+  border-top: 1px #e0e0e0 solid;
   position: fixed;
   bottom: 0;
-  left: 0;
-}
+  left: 0; }
 
 /* ============================================
    Sections
    ============================================ */
-/* line 204, ../scss/style.scss */
 #about, #events, #gallery {
-  display: none;
-}
+  display: none; }
 
-/* line 211, ../scss/style.scss */
 .stage {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
-}
+  z-index: 1; }
 
-/* line 220, ../scss/style.scss */
 #home {
-  background-color: #EFEFEF;
-}
+  background-color: #EFEFEF; }
 
 /* ============================================
    About
    ============================================ */
-/* line 228, ../scss/style.scss */
 #about {
   background: url(../img/sample2.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
-}
+  background-size: cover; }
 
 /* ============================================
    Events
    ============================================ */
-/* line 240, ../scss/style.scss */
 #events {
   background: url(../img/sample3.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
-}
+  background-size: cover; }
 
 /* ============================================
    Gallery
    ============================================ */
-/* line 252, ../scss/style.scss */
 #gallery {
   width: 100%;
   min-height: 100%;
-  /* Images */
-}
-/* line 255, ../scss/style.scss */
-#gallery .columns {
-  min-height: 33.333%;
-}
-/* line 257, ../scss/style.scss */
-#gallery .columns img {
-  width: 100%;
-  margin-bottom: 0.333%;
-}
-/* line 261, ../scss/style.scss */
-#gallery .columns .left {
-  float: left;
-  width: 33%;
-  margin-right: 0.333%;
-}
-/* line 266, ../scss/style.scss */
-#gallery .columns .center {
-  float: left;
-  width: 33.333%;
-}
-/* line 270, ../scss/style.scss */
-#gallery .columns .right {
-  float: left;
-  width: 33%;
-  margin-left: 0.333%;
-}
+  /* Images */ }
+  #gallery .columns {
+    min-height: 33.333%; }
+    #gallery .columns img {
+      width: 100%;
+      margin-bottom: 0.333%; }
+    #gallery .columns .left {
+      float: left;
+      width: 33%;
+      margin-right: 0.333%; }
+    #gallery .columns .center {
+      float: left;
+      width: 33.333%; }
+    #gallery .columns .right {
+      float: left;
+      width: 33%;
+      margin-left: 0.333%; }
 
 /* ============================================
    Misc
    ============================================ */
-/* line 285, ../scss/style.scss */
 .clearfix:after {
   content: ".";
   display: block;
   clear: both;
   visibility: hidden;
   line-height: 0;
-  height: 0;
-}
+  height: 0; }
 
-/* line 293, ../scss/style.scss */
 .clearfix {
-  display: inline-block;
-}
+  display: inline-block; }
 
-/* line 296, ../scss/style.scss */
 html[xmlns] .clearfix {
-  display: block;
-}
+  display: block; }
 
-/* line 299, ../scss/style.scss */
 * html .clearfix {
-  height: 1%;
-}
+  height: 1%; }
