WOOT WOOT players done, let me know if theres any weird functionality
 besides the next track playing after the first ones complete

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -180,6 +180,7 @@ a.link:hover, .logo:hover{
 	float: left;
 	height: 64px;
 	width: 64px;
+	background-size: 64px;
 	background-color: #FF7729;
 	margin-right: 8px;
 }
