--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-/* ============================================
-   Reset
-   ============================================ */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figcaption, figure, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -45,35 +42,26 @@ a:hover, a:active {
   outline: 0; }
 
 ::-moz-selection {
-  background: #d06200;
+  background: #ff7729;
   color: #fff;
   text-shadow: none; }
 
 ::selection {
-  background: #d06200;
+  background: #ff7729;
   color: #fff;
   text-shadow: none; }
 
-/* ============================================
-   Typography
-   ============================================ */
-/* ============================================
-   Styles
-   ============================================ */
-html, body {
-  overflow-x: hidden;
-  overflow-y: scroll; }
-
 html {
-  height: 100%; }
+  height: 100%;
+  overflow-x: hidden; }
 
 body {
   background-color: #EFEFEF;
   width: 100%;
   height: 100%;
   font-size: 100%;
-  overflow: hidden;
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400; }
 
 .section {
   width: 100%;
@@ -84,11 +72,24 @@ body {
    ============================================ */
 .nav {
   width: 100%;
+  height: 64px;
   height: 4em;
   background-color: #FFFFFF;
   position: fixed;
   border-bottom: 4px solid #ff7729;
-  z-index: 2; }
+  z-index: 2;
+  color: #000000;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s; }
+
+.navonpageload {
+  -webkit-transform: translateY(-4em);
+  -moz-transform: translateY(-4em);
+  -o-transform: translateY(-4em);
+  -ms-transform: translateY(-4em);
+  transform: translateY(-4em); }
 
 .icon {
   float: left;
@@ -109,6 +110,9 @@ body {
   -moz-transition: 0.4s;
   -o-transition: 0.4s;
   transition: 0.4s; }
+
+.nav .activepage {
+  color: #ff7729; }
 
 .logo-text {
   float: left;
@@ -189,18 +193,26 @@ a.link:hover, .logo:hover {
   height: 64px;
   z-index: 2; }
   .nowplaying h1 {
-    line-height: 24px;
-    font-size: 16px;
-    font-size: 1em;
-    font-size: 1rem;
-    color: #000000;
-    text-overflow: ellipsis; }
-  .nowplaying h2 {
     margin-top: 8px;
+    line-height: 24px;
+    font-size: 18px;
+    font-size: 1.125em;
+    font-size: 1.125rem;
+    text-indent: 12px;
+    text-indent: 0.75em;
+    text-indent: 0.75rem;
+    color: #000000;
+    font-weight: 400;
+    text-overflow: ellipsis;
+    text-transform: capitalize; }
+  .nowplaying h2 {
     line-height: 18px;
     font-size: 12px;
     font-size: 0.75em;
     font-size: 0.75rem;
+    text-indent: 12px;
+    text-indent: 0.75em;
+    text-indent: 0.75rem;
     color: #FF7729; }
 
 .albumart {
@@ -208,8 +220,7 @@ a.link:hover, .logo:hover {
   height: 64px;
   width: 64px;
   background-size: 64px;
-  background-color: #FF7729;
-  margin-right: 8px; }
+  background-color: #FF7729; }
 
 .tracklist {
   display: none;
@@ -217,23 +228,26 @@ a.link:hover, .logo:hover {
   width: 256px;
   border-bottom: 4px solid #ff7729;
   z-index: 2; }
-  .tracklist p {
-    color: #000000;
-    line-height: 32px;
-    text-indent: 20px;
-    text-align: left;
-    font-size: 16px;
-    font-size: 1em;
-    font-size: 1rem;
-    z-index: 3;
-    border-bottom: #efefef 1px solid;
-    background-color: #FFFFFF; }
-    .tracklist p:hover {
-      color: #666;
-      cursor: pointer; }
+
+.tracktext {
+  color: #000000;
+  line-height: 32px;
+  text-indent: 24px;
+  text-align: left;
+  font-size: 14px;
+  font-size: 0.875em;
+  font-size: 0.875rem;
+  font-weight: 300;
+  z-index: 3;
+  border-bottom: #efefef 1px solid;
+  background-color: #FFFFFF; }
+  .tracktext:hover {
+    color: #666;
+    cursor: pointer; }
 
 .trackplaying {
-  border-left: 8px solid #ff7729; }
+  border-left: 8px solid #ff7729;
+  text-indent: 16px; }
 
 .footer {
   background-color: white;
@@ -254,45 +268,143 @@ a.link:hover, .logo:hover {
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 0;
   left: 0;
   z-index: 1; }
 
 #home {
-  background-color: #EFEFEF; }
+  background-color: #efefef; }
 
 /* ============================================
    About
    ============================================ */
 #about {
-  background: url(../img/sample2.jpg) no-repeat center center fixed;
+  background: url("../img/citybg.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; }
+  background-size: cover;
+  color: #FFFFFF;
+  width: 100%;
+  line-height: 1.5; }
+  #about > img {
+    display: block;
+    width: 96%;
+    padding: 15% 2% 0px 2%;
+    max-width: 900px;
+    margin: 0 auto; }
+  #about > p {
+    max-width: 900px;
+    margin: auto;
+    padding: 64px;
+    padding: 4rem;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 2%;
+    -moz-column-gap: 2%;
+    column-gap: 2%; }
+  #about h3 {
+    font-size: 24px;
+    font-size: 1.5em;
+    font-size: 1.5rem;
+    overflow: hidden;
+    text-align: center;
+    max-width: 900px;
+    margin: auto;
+    padding-top: 8px;
+    padding-top: 0.5rem; }
+  #about .lines span {
+    position: relative; }
+  #about .lines span:before,
+  #about .lines span:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    margin-top: -4px;
+    margin-top: -0.25rem;
+    height: 4px;
+    height: 0.25rem;
+    border-top: 1px solid white;
+    border-top: 0.0625rem solid white;
+    border-bottom: 3px solid white;
+    border-bottom: 0.1875rem solid white;
+    width: 200em;
+    max-width: 900px; }
+  #about .lines span:before {
+    right: 100%;
+    margin-right: 8px;
+    margin-right: 0.5rem; }
+  #about .lines span:after {
+    left: 100%;
+    margin-left: 8px;
+    margin-left: 0.5rem; }
+  #about h1 {
+    color: #ff7729;
+    font-size: 32px;
+    font-size: 2em;
+    font-size: 2rem;
+    font-weight: 700; }
+  #about h2 {
+    color: #ff7729;
+    font-size: 14px;
+    font-size: 0.875em;
+    font-size: 0.875rem;
+    font-weight: 400;
+    font-style: italic; }
+  #about p {
+    color: #FFFFFF;
+    font-size: 14px;
+    font-size: 0.875em;
+    font-size: 0.875rem;
+    font-weight: 400; }
+  #about a {
+    color: #ff7729;
+    text-decoration: none; }
+
+.harrybio, .jakebio {
+  height: 66%;
+  position: absolute;
+  bottom: 0px; }
+
+.harrybio {
+  left: 0px; }
+
+.jakebio {
+  right: 0px; }
+
+.harrybiotext, .harryillustration {
+  float: left; }
+
+.jakebiotext, .jakeillustration {
+  float: right; }
+
+.harrybiotext, .jakebiotext {
+  padding: 0px 16px;
+  padding: 0px 1em;
+  padding: 0px 1rem;
+  width: 20em; }
+
+.harryillustration, .jakeillustration {
+  height: 100%; }
 
 /* ============================================
    Events
    ============================================ */
-#events {
-  background: url(../img/sample3.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
-
 /* ============================================
    Gallery
    ============================================ */
 #gallery {
   width: 100%;
   min-height: 100%;
-  /* Images */ }
+  background-color: #efefef;
+  margin-top: 64px;
+  margin-top: 4em; }
   #gallery .columns {
     min-height: 33.333%; }
     #gallery .columns img {
       width: 100%;
-      margin-bottom: 0.333%; }
+      margin-bottom: 0.333%;
+      margin-bottom: 0.333vw; }
     #gallery .columns .left {
       float: left;
       width: 33%;
